modified mapValues to take in only value